<resources>
    <string name="app_name">OtaService</string>
    <string name="app_name_aha">OTA Service</string>
    <integer name="anim_time">200</integer>
    <string name="system_update">Software Updating</string>
    <string name="check_new_version">New Version %1$s was found. Do you need to download it?</string>
    <string name="new_version_log_default">Update log: fixed some bugs,</string>
    <string name="load_back">Download</string>
    <string name="load_back_now">Download Now</string>
    <string name="cancel">Cancel</string>
    <string name="download_success">Download success</string>
    <string name="ota_download_success">File downloaded successfully. Did you upgrade?</string>
    <string name="update">Upgrade</string>
    <string name="net_update">Network upgrade</string>
    <string name="local_update">local upgrade</string>
    <string name="no_network">No network, please network first</string>
    <string name="no_new_fireware">No new version was found</string>
    <string name="check">Checking in, please wait a moment....</string>
    <string name="download_size">%1$s/%2$s</string>
    <string name="zip_download_success">The upgrade package has been downloaded. Did you upgrade?</string>
    <string name="upgrade">Upgrade</string>
    <string name="remind_me">Remind Me Later</string>
    <string name="ignore">IGNORE</string>
    <string name="redownload">Download again</string>
    <string name="local_has_file">Upgrade file is available locally. Do you want to upgrade?</string>
    <string name="delete">Delete</string>
    <string name="delete_success">Delete success</string>
    <string name="pause">PAUSE</string>
    <string name="no_usb_here">No usb found</string>
    <string name="more_usb">There are multiple USB devices, please make sure the device only has one USB</string>
    <string name="no_updatefile_usb">No update.zip here</string>
    <string name="local_file_can_upgrade">File detected successfully. Is it upgraded?</string>
    <string name="check_your_file">The file is not upgradable. Please download again ！</string>
    <string name="server_not_found">Unable to connect to the server,please check your network or server</string>
    <string name="download_fail">Download failed, server connection not found!</string>
    <string name="notice">Prompt</string>
    <string name="comfire">Comfire</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="cache_not_enough">There is not enough local storage. Will you delete the local update.zip file?</string>
    <string name="time_out">Connect timeout! Please check the network</string>
    <string name="current_vertion">Current Version: %1$s</string>
    <string name="verify">Verify file</string>
    <string name="id_not_same">The server ID is different from the local ID</string>
    <string name="downloading">Please do not power off, disconnect or leave the interface, otherwise the OTA upgrade will fail</string>
    <string name="start">Start</string>
    <string name="pausing">Pausing...</string>
    <string name="file_damaged">File damaged,please download again</string>
    <string name="delete_redownload">Delete and download again</string>
    <string name="others_error">Unable to connect to the server,please check your network or server</string>
    <string name="back_download_tip">Do you want to cancel the file download?</string>
    <string name="cancel_download">Cancel download</string>
    <string name="back_download">Download background</string>
    <string name="background">BACKGROUND</string>
    <string name="click_too_fast">Please do not click too quickly!</string>
    <string name="try_again">Try again</string>
    <string name="download_pause">Download has been paused</string>
    <string name="not_anim">Please switch to administrator account first</string>
    <string name="apk_version">apk version:v1.1.4</string>

    <string name="dialog_ignore">Never show this box again</string>
    <string name="dialog_tips">You can check progress or install package in Settings: About the Device -> Firmware Version Update</string>
    <string name="net_off_tips">Network is slow or abnormal,reconnecting, please wait...</string>
    <string name="background_download_fail">Background download failed, please download again</string>
    <string name="update_exit">Exit</string>

    <string name="abupdate_title">OtaService</string>
    <string name="abupdate_title2">System upgrading, do not power off or exit this interface!</string>
    <string name="abupdate_progress">Loading, please wait...</string>
    <string name="abupdate_msg_success">The system upgrade is successful! The system will be imported and used after restart. Do you want to restart now?</string>
    <string name="abupdate_msg_error">The system upgrade failed, please restart to upgrade again!</string>
    <string name="abupdate_strat_fail">Failed to start the upgrade service!</string>
    <string name="abupdate_strat_deniy">Do not upgrade again! It is detected that the upgrade process has been triggered this time, please restart to check the result.</string>
    <string name="abupdate_rebootnow">Restart now</string>
    <string name="abupdate_rebootlater">Restart later</string>

    <string name="current_is_newest">This is the latest version</string>
</resources>
