<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/x860"
    android:layout_height="@dimen/y490"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/corners_bg"
    android:layout_gravity="center">


    <TextView
        android:id="@+id/main_current_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="v1.0.0"
        android:textSize="@dimen/x30"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/y50"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x2"
        android:layout_marginTop="@dimen/x25"
        android:layout_marginLeft="@dimen/y2"
        android:layout_marginRight="@dimen/y2"
        android:focusable="true"
        android:background="@color/transparent_write"/>

    <Button
        android:id="@+id/btn_net"
        android:layout_width="@dimen/x250"
        android:layout_height="@dimen/y50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y55"
        android:background="@drawable/btn_round_selector"
        android:text="@string/net_update"
        android:textColor="#ffffff"
        android:textSize="@dimen/x20" />

    <Button
        android:id="@+id/btn_local"
        android:layout_width="@dimen/x250"
        android:layout_height="@dimen/y50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y50"
        android:background="@drawable/btn_round_selector"
        android:text="@string/local_update"
        android:textColor="#ffffff"
        android:textSize="@dimen/x20" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="@dimen/x250"
        android:layout_height="@dimen/y50"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y50"
        android:background="@drawable/btn_round_selector"
        android:text="@string/update_exit"
        android:textColor="#ffffff"
        android:textSize="@dimen/x20" />


</LinearLayout>