<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/y50"
            android:gravity="center"
            android:textColor="@color/deep_grap"
            android:textSize="@dimen/x18"
            android:text="@string/notice"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.56dp"
            android:layout_margin="@dimen/x5"
            android:background="@color/list_gray"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y180"
           >

            <TextView
                android:id="@+id/pop_msg_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/sky_blue"
                android:textSize="@dimen/x20"
                android:layout_marginLeft="@dimen/x10"
                android:layout_marginRight="@dimen/x10"
                android:layout_marginTop="@dimen/y30"
                android:layout_marginBottom="@dimen/y30"
                tools:text="文件下载不了啦"
                />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.56dp"
            android:background="@color/list_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/y60"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pop_cancal"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/back"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="match_parent" />

            <View
                android:layout_width="0.56dp"
                android:layout_height="match_parent"
                android:background="@color/list_gray"/>
            <TextView
                android:id="@+id/pop_comfire"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/finish"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:background="?android:attr/selectableItemBackground"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>