<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/x860"
    android:layout_height="@dimen/y490"
    android:gravity="center_horizontal"
    android:layout_gravity="center"
    android:background="@drawable/corners_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/download_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/x30"
        android:text="@string/system_update"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/y30"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y2"
        android:layout_marginTop="@dimen/y25"
        android:layout_marginLeft="@dimen/x2"
        android:layout_marginRight="@dimen/x2"
        android:background="@color/transparent_write"/>

   <FrameLayout
        android:layout_width="@dimen/x200"
        android:layout_height="@dimen/x200"
        android:layout_marginTop="@dimen/y30"
       android:visibility="gone">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:civ_border_color="@color/white"
            app:civ_border_width="@dimen/x2"
            android:src="@mipmap/ota" />

        <TextView
            android:id="@+id/download_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="@dimen/x35"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/x50"
            tools:text="IST"/>

        <TextView
            android:id="@+id/download_device_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/x25"
            android:layout_marginTop="@dimen/x110"
            tools:text="V1.0.0.0"/>
    </FrameLayout>

    <TextView
        android:id="@+id/download_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y20"
        android:textColor="@color/white"
        android:textSize="@dimen/x30"
        tools:text="下载已暂停"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ProgressBar
            android:id="@+id/progress"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="@dimen/x660"
            android:layout_height="@dimen/y15"
            android:layout_marginLeft="@dimen/x80"
            android:layout_marginBottom="@dimen/y6"
            android:clickable="false"
            android:focusable="false"
            android:progressDrawable="@drawable/seekbar_style"
            android:layout_gravity="bottom"
            android:visibility="visible" />

        <TextView
            android:id="@+id/progress_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x10"
            android:text="0"
            android:layout_gravity="bottom"
            android:textColor="@color/white"
            android:textSize="@dimen/x24" />
    </LinearLayout>

    <TextView
        android:id="@+id/download_speed_tv_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/x24"
        android:gravity="top|center"
        android:paddingTop="@dimen/y10"
        tools:text="23M/S" />

    <LinearLayout
        android:layout_width="@dimen/x850"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y10"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/download_speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x10"
            android:textColor="@color/white"
            android:textSize="@dimen/x24"
            android:text="23M/S"
            tools:text="23M/S" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/download_size_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/x15"
            android:layout_marginRight="@dimen/x75"
            android:textColor="@color/white"
            android:textSize="@dimen/x24"
            tools:text="12m/16m" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_downloading_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:paddingRight="@dimen/x100"
        android:paddingLeft="@dimen/x100">
        <Button
            android:id="@+id/btn_puase"
            android:layout_width="@dimen/x200"
            android:layout_weight="1"
            android:layout_height="@dimen/y50"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x130"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_corner"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/x20" />

        <View
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_download_backend"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y50"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/x130"
            android:layout_marginRight="@dimen/x30"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_corner"
            android:text="@string/background"
            android:textColor="@color/white"
            android:textSize="@dimen/x20" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_not_downloading_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y150"
        android:layout_weight="0"
        android:visibility="gone"
        tools:visibility="visible"
        android:orientation="horizontal"
        android:paddingRight="@dimen/x100"
        android:paddingLeft="@dimen/x100">
        <Button
            android:id="@+id/btn_redownload"
            android:layout_width="@dimen/x200"
            android:layout_weight="1"
            android:layout_height="@dimen/y50"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x130"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_corner"
            android:text="@string/redownload"
            android:textColor="@color/white"
            android:textSize="@dimen/x20" />

        <View
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_weight="1"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y50"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/x130"
            android:layout_marginRight="@dimen/x30"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_corner"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/x20" />
    </LinearLayout>

</LinearLayout>